--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,18 +1,13 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/spec",
-    "types": [
-      "jasmine",
-      "node"
-    ]
+    "emitDecoratorMetadata": true,
+    "module": "commonjs",
+    "outDir": "../out-tsc/spec",
+    "types": ["jest"]
   },
   "files": [
-    "src/test.ts",
     "src/polyfills.ts"
   ],
-  "include": [
-    "src/**/*.spec.ts",
-    "src/**/*.d.ts"
-  ]
+  "include": ["**/*.spec.ts", "**/*.d.ts"]
 }
